[#182656459] Fixed page jumping on select.

--- a/src/components/bottom-bar.scss
+++ b/src/components/bottom-bar.scss
@@ -11,6 +11,7 @@
 
     .selectElement {
       width: 70px;
+      font-size: 10.5px;
     }
 
     &.disabled {
